Fixed a couple of layout issues with the layout of the datatable rows.

--- a/root/static/less/portal.less
+++ b/root/static/less/portal.less
@@ -287,6 +287,8 @@ legend {
 #searchResults h4, #searchResults h4 * {
   font-size: 11pt !important;
   font-weight: bold;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #searchResults h4 span.beam {
@@ -312,6 +314,10 @@ legend {
 
 #searchResults p {
   font-size: 10pt !important;
+  color: black;
+  font-weight: normal;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #searchResults li button {
